# digital-literacy-poc

./: .gitignore  CODEOWNERS  Dockerfile  README.md  docker-compose.yml  extract_vulnerability.py  railway.toml  receivers.txt
.github/workflows/: build-on-ec2.yml  build.yml  linter.yml  stale.yml
.trunk/: trunk.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250410_092044_ef1c021c3afc_initial_schema.py  20250410_122149_a0f9a7719917_add_answers_column_to_exam_attempts.py  20250410_122441_61494e2bd473_modify_exam_schema.py  20250410_122612_264e1360047b_modify_exam_schema_again.py
backend/backend/: main.py
backend/backend/core/: config.py  db.py  dependencies.py  security.py
backend/backend/models/: certificate.py  course.py  exam.py  institute.py  user.py
backend/backend/routers/: admin.py  auth.py  candidate.py  institute.py  trainer.py
backend/backend/schemas/: course.py  exam.py  institute.py  subject.py  user.py
backend/backend/services/: admin.py  auth.py  candidate.py  institute.py  trainer.py
backend/backend/utils/: file_utils.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Register.tsx
frontend/src/pages/admin/: Courses.tsx  Dashboard.tsx  Institutes.tsx  (+1 more)
frontend/src/services/: admin.ts  auth.ts  candidate.ts  public.ts  trainer.ts
(+8 files in other folders)
